# osmordred

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml  license.txt  pyproject.toml
.github/: cibuildwheel.yaml
.github/workflows/: cibuildwheel.yaml
Code/Osmordred/: CMakeLists.txt  Osmordred.cpp
Code/Osmordred/Wrap/: rdOsmordred.cpp
build_patched_rdkit-pypi/: .gitignore  README.md  build_rdkit-pypi.sh  rdkit-pypi_2023_09_3_osmordred.diff
cmakebuild/: CMakeLists.txt  README.MD
cmakebuild/cppmordred/: cppmordred.cpp
osmordred/: __init__.py
osmordred_rdkit_2023_09_3_patches/: AllChem.py.diff  CMakeLists.txt.diff  Code_CMakeLists.txt.diff  font_sha_patch.diff
rdkit/Chem/Osmordred/: __init__.py
skbuild/: CMakeLists.txt  MANIFEST.in  README.md  build.sh  pyproject.toml  setup.py  setup_env.sh  test.py
skbuild/cppmordred/: __init__.py  cppmordred.cpp
skbuild/test/: new_ref.py  tAll.py  tBEState.py  test.py
test/: test.py
